# OpenGLES30NDK

./: README.md  gradle.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fragment2.glsl  fragment3.glsl  vertex2.glsl  vertex3.glsl
app/src/main/cpp/: CMakeLists.txt  base_Log.cpp  base_Log.h  esUtils.cpp  esUtils.h  example.h  example1.cpp  example10.cpp  example11.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  example7.cpp  example8.cpp  example9.cpp  native-lib.cpp
app/src/main/java/cn/root4/opengles30ndk/: MainActivity.java  NativeRenderer.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
